# lab1c

custom_msgs/: CMakeLists.txt  package.xml
ros_exercises/: log.npf  package.xml  setup.py
ros_exercises/install/: setup.sh
ros_exercises/install/ros_exercises/lib/ros_exercises/: fake_scan_publisher  open_space_publisher  simple_publisher  simple_subscriber
ros_exercises/install/ros_exercises/share/ros_exercises/: package.sh
ros_exercises/install/ros_exercises/share/ros_exercises/launch/: my_first_launch.launch.xml
ros_exercises/launch/: static_tf_publisher.launch.xml
ros_exercises/log/: latest_build
ros_exercises/ros_exercises/: base_link_tf_pub.py  dynamic_tf_cam_publisher.py  fake_scan_publisher.py  open_space_publisher.py  simple_publisher.py  simple_subscriber.py  static_tf_cam_publisher.py  utils.py
ros_exercises/rosbag/fake_scan_bag/: fake_scan_bag_0.db3  metadata.yaml
ros_exercises/rosbag/map_file/: metadata.yaml
ros_exercises/rosbag/one_loop/: metadata.yaml
